src/index.css
/* Lutsk-sity font import */
@font-face {
  font-family: "Lutsk-sity";
  src: url("Lutsk-sity.eot");
  src:
    local("Lutsk-sity"),
    url("./fonts/Lutsk/Lutsk-sity.eot") format("embedded-opentype"),
    url("./fonts/Lutsk/Lutsk-sity.woff2") format("woff2"),
    url("./fonts/Lutsk/Lutsk-sity.woff") format("woff"),
    url("./fonts/Lutsk/Lutsk-sity.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

/* Colors */
:root {
  --gray0: #fafafa;
  --white-0: #fff;
  --gray-black-950: #000;
  --gray-black-850: rgba(255, 255, 255, 0.15);
  --gray-black-800: #454545;
  --gray-black-600: #5d5d5d;
  --gray-black-400: #7b7b7b;
  --gray-black-300: #b0b0b0;
  --gray-black-200: #d1d1d1;
  --gray-black-100: #e7e7e7;
  --gray-black-25: linear-gradient(
    172deg,
    rgba(255, 246, 246, 0.21) 5.87%,
    #efeeee 103.54%
  );
  --second-text-color-white-player: #7b7b7b;
  --red-700: #c60f18;
  --red-500: #ff3a37;
  --red-900: #87151a;
  --red-400-error: #ff656c;
}

/* Reset */
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
}

html {
  scroll-behavior: smooth;
}

/* Body Styles */
body {
  margin: 0;
  padding: 0;
  font-family: "Montserrat Alternates", sans-serif;
}

/* Image Styles */
img {
  max-width: 100%;
  display: block;
}

/* Form Element Styles */
input,
textarea,
button,
select {
  font: inherit;
}

/* Button Styles */
button {
  cursor: pointer;
}

a {
  text-decoration-line: none;
}

/* Container Styles */
.container {
  display: grid;
  text-align: center;
  grid-template-columns: 1fr;

  @media (min-width: 1440px) {
    grid-template-columns: repeat(12, 1fr);
    column-gap: 24px;
  }
}

/* Font Styles */
/* Paragraph */
.text-xs {
  font-size: 10px;
  font-style: normal;
  font-weight: 400;
  line-height: 14px;
  /* 140% */
}

.text-xs-bold {
  font-size: 8px;
  font-style: normal;
  font-weight: 700;
  line-height: 14px;
  /* 175% */

  @media screen and (min-width: 1440px) {
    font-size: 10px;
    font-style: normal;
    font-weight: 700;
    line-height: 14px;
    /* 140% */
  }
}

.text-sm {
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  /* 133.333% */
}

.text-sm-semibold {
  font-size: 12px;
  font-style: normal;
  font-weight: 600;
  line-height: 16px;
  /* 133.333% */
}

.text-base {
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;

  @media screen and (min-width: 1440px) {
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: 24px;
  }
}

.text-base-semibold {
  font-size: 14px;
  font-style: normal;
  font-weight: 600;
  line-height: 24px;
  /* 171.429% */

  @media screen and (min-width: 1440px) {
    font-size: 16px;
    font-style: normal;
    font-weight: 600;
    line-height: 24px;
    /* 150% */
  }
}

.text-base-bold {
  font-family: "Unbounded", sans-serif;
  font-size: 16px;
  font-style: normal;
  font-weight: 700;
  line-height: 24px;
  /* 150% */
}

.text-lg {
  font-size: 20px;
  font-style: normal;
  font-weight: 700;
  line-height: 28px;
  /* 140% */
  letter-spacing: 0.8px;
}

.text-map {
  font-size: 8px;
  font-style: normal;
  font-weight: 600;
  line-height: 9px;
  /* 112.5% */
}

.text-l {
  font-family: "Unbounded", sans-serif;
  font-size: 20px;
  font-style: normal;
  font-weight: 600;
  line-height: normal;
}

/* Heading */
.text-xl-medium {
  font-size: 20px;
  font-style: normal;
  font-weight: 500;
  line-height: 28px;
  /* 140% */
}

.text-xl-semibold {
  font-size: 20px;
  font-style: normal;
  font-weight: 600;
  line-height: 28px;
  /* 140% */
  letter-spacing: 0.8px;
}

.text-2xl {
  font-family: "Unbounded";
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;

  @media screen and (min-width: 1440px) {
    font-family: "Unbounded", sans-serif;
    font-size: 18px;
    font-style: normal;
    font-weight: 400;
    line-height: 28px;
    /* 155.556% */
  }
}

.text-3xl {
  font-family: "Unbounded", sans-serif;
  font-size: 10px;
  font-style: normal;
  font-weight: 600;
  line-height: 16px;
  /* font-family: "Unbounded";
  font-size: 12px;
  font-style: normal;
  font-weight: 600;
  line-height: 16px; */
  /* font-family: "Unbounded", sans-serif;
  font-size: 16px;
  font-style: normal;
  font-weight: 600;
  line-height: 24px; */
  /* 150% */

  @media screen and (min-width: 1440px) {
    font-size: 20px;
    font-style: normal;
    font-weight: 600;
    line-height: 28px;
    /* 140% */
  }
}

.text-4xl {
  font-family: "Unbounded", sans-serif;
  font-size: 20px;
  font-style: normal;
  font-weight: 600;
  line-height: 28px;

  @media screen and (min-width: 1440px) {
    font-family: "Unbounded", sans-serif;
    font-size: 32px;
    font-style: normal;
    font-weight: 700;
    line-height: 40px;
  }
}

.text-5xl {
  font-family: "Lutsk-sity";
  font-size: 28px;
  font-style: normal;
  font-weight: 400;
  line-height: 45px;
  /* 125% */
  /* text-transform: uppercase; */

  @media screen and (min-width: 1440px) {
    font-size: 64px;
    line-height: 80px;
  }
}

body::-webkit-scrollbar {
  width: 4px;
  height: 191.538px;
}

/* Стилізація віджета смуги прокрутки */

body::-webkit-scrollbar-thumb {
  /* Ширина віджета смуги прокрутки */

  background-color: #fff;
  border-radius: 2px;
}

/* Стилізація фону смуги прокрутки */
body::-webkit-scrollbar-track {
  background-color: var(--gray-black-800, #454545);
}

/* Заборона прокручування смуги в горизонтальному напрямку */
body::-webkit-scrollbar:horizontal {
  display: none;
}

/* Заборона прокручування смуги в вертикальному напрямку */
body::-webkit-scrollbar-vertical {
  display: block;
}

